--- a/shutting_yard_infix_to_postfix.ipynb
+++ b/shutting_yard_infix_to_postfix.ipynb
@@ -34,8 +34,8 @@
         "# Detailed Example \n",
         "\n",
         "input_example =  '3+4*2/(1-5)^2^3'\n",
-        "#input_example = '3 + 4 × 2 ÷ ( 1 − 5 )' \n",
-        "\n",
+        "#input_example = '3 + 4 × 2 ÷ ( 1 − 5 ) ^2 ^ 3' \n",
+        "\n", 
         "#'3 + 4 * 2 ÷ ( 1 − 5 ) ^ 2 ^ 3'\n",
         "\n"
       ],
