--- a/shutting_yard_infix_to_postfix.ipynb
+++ b/shutting_yard_infix_to_postfix.ipynb
@@ -50,7 +50,7 @@
       "source": [
         " # Shunting Yard \n",
         "\n",
-        "# Assumptions 1) functions are not covered. 2) single integers \n",
+        "# Assumptions 1) Functions are not covered. 2) Only single digit integers are covered. \n",
         "\n",
         "operators = \"+-−/÷*×^\"\n",
         "operator_precedence = {'+' : 2, '-' : 2, '−': 2, '*' : 3, '×': 3 , '/' : 3, '÷' : 3, '^': 4}\n",
