--- a/shutting_yard_infix_to_postfix.ipynb
+++ b/shutting_yard_infix_to_postfix.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "shutting_yard.ipynb",
+      "name": "shutting_yard_infix_to_postfix.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM/mwckQZ58qu8OOMbi/Fn8",
+      "authorship_tag": "ABX9TyNzhPLa9dFraTYgLbrkTktr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,25 +22,8 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/andrewpkitchin/parsing-equations/blob/main/shutting_yard.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/andrewpkitchin/parsing-equations/blob/main/shutting_yard_infix_to_postfix.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ECTfO6ng6BQE"
-      },
-      "source": [
-        "# Detailed Example \n",
-        "\n",
-        "input_example =  '3+4*2/(1-5)^2^3'\n",
-        "# input_example = '3 + 4 × 2 ÷ ( 1 − 5 ) ^2 ^ 3' \n",
-        "\n", 
-        "# '3 + 4 * 2 ÷ ( 1 − 5 ) ^ 2 ^ 3'\n",
-        "\n"
-      ],
-      "execution_count": 96,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -48,7 +31,7 @@
         "id": "OTfaNZTT6gpn"
       },
       "source": [
-        " # Shunting Yard \n",
+        " # Shunting Yard - Infix to Postfix \n",
         "\n",
         "# Assumptions 1) Functions are not covered. 2) Only single digit integers are covered. \n",
         "\n",
@@ -63,8 +46,6 @@
         "\n",
         "  while marker <= len(equation)-1:\n",
         "    token = equation[marker]\n",
-        "    print('output', output_queue)\n",
-        "    print('op stack', operator_stack)\n",
         "\n",
         "# white space    \n",
         "    if token in \" \":\n",
@@ -112,7 +93,22 @@
         "  return output_queue\n",
         "\n"
       ],
-      "execution_count": 103,
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ECTfO6ng6BQE"
+      },
+      "source": [
+        "# Example \n",
+        "\n",
+        "input_example =  '3+4*2/(1-5)^2^3'\n",
+        "\n",
+        "# input_example = '3 + 4 × 2 ÷ ( 1 − 5 ) ^ 2 ^ 3' "
+      ],
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -122,47 +118,46 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "20b1a277-36de-4ea7-b279-f6b48d22fcc7"
+        "outputId": "7a425ba1-bcda-4aed-997b-c3d30ac4c836"
       },
       "source": [
         "print(shunting_yard(input_example))"
       ],
-      "execution_count": 104,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "output []\n",
-            "op stack []\n",
-            "output ['3']\n",
-            "op stack []\n",
-            "output ['3']\n",
-            "op stack ['+']\n",
-            "output ['3', '4']\n",
-            "op stack ['+']\n",
-            "output ['3', '4']\n",
-            "op stack ['+', '*']\n",
-            "output ['3', '4', '2']\n",
-            "op stack ['+', '*']\n",
-            "output ['3', '4', '2', '*']\n",
-            "op stack ['+', '/']\n",
-            "output ['3', '4', '2', '*']\n",
-            "op stack ['+', '/', '(']\n",
-            "output ['3', '4', '2', '*', '1']\n",
-            "op stack ['+', '/', '(']\n",
-            "output ['3', '4', '2', '*', '1']\n",
-            "op stack ['+', '/', '(', '-']\n",
-            "output ['3', '4', '2', '*', '1', '5']\n",
-            "op stack ['+', '/', '(', '-']\n",
-            "output ['3', '4', '2', '*', '1', '5', '-']\n",
-            "op stack ['+', '/']\n",
-            "output ['3', '4', '2', '*', '1', '5', '-']\n",
-            "op stack ['+', '/', '^']\n",
-            "output ['3', '4', '2', '*', '1', '5', '-', '2']\n",
-            "op stack ['+', '/', '^']\n",
-            "output ['3', '4', '2', '*', '1', '5', '-', '2']\n",
-            "op stack ['+', '/', '^', '^']\n",
             "['3', '4', '2', '*', '1', '5', '-', '2', '3', '^', '^', '/', '+']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ngc2Xgx7pxgG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9a403f32-3ecb-47a2-b61a-1a3337156764"
+      },
+      "source": [
+        "postfix_output = \"\"\n",
+        "\n",
+        "for i in shunting_yard(input_example):\n",
+        "  \n",
+        "  postfix_output = postfix_output + i\n",
+        "\n",
+        "print(postfix_output) \n"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "342*15-23^^/+\n"
           ],
           "name": "stdout"
         }
